# Uni-TTS

./: .gitignore  LICENSE  PLAN.md  README.en.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.py
backend/api/: batch.py  engines.py  models.py  system.py  tts.py
backend/db/: database.py
backend/engines/: __init__.py  base.py  inference_server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/stores/: theme.js
frontend/src/views/: About.vue  GradioEmbed.vue  Home.vue  Inference.vue  ModelManager.vue
