[project]
name = "uni-tts"
version = "0.1.0"
description = "一站式 TTS 工作站"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "modelscope>=1.15.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]
